[package]
name = "rustChat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
tokio = { version = "1.36",features = ["sync"]}
serde= {version ="1.0.196", features = ["rc","derive"]}
serde_json = "1.0.113"
futures-lite = "2.2.0"